update: view post paid

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -160,7 +160,8 @@
     "owner": "Owner",
     "phoneNumber": "Phone Number",
     "createPost": "Create Post And Pay With 2$",
-    "updatePost": "Update Post"
+    "updatePost": "Update Post",
+    "updatePostAndPay": "Update Post And Pay"
   },
   "homePage": {
     "mostViewed": "Most Viewed",
