--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -172,7 +172,8 @@
     "locationInMap": "Vị trí trên bản đồ",
     "evaluationAndReporting": "Đánh giá và báo cáo",
     "joiningDate": "Ngày tham gia",
-    "areYouSureToReport": "Bạn có chắc chắn muốn báo cáo bài viết này?"
+    "areYouSureToReport": "Bạn có chắc chắn muốn báo cáo bài viết này?",
+    "suggest": "Gợi ý"
   },
   "userInforPage": {
     "accountInfor": "Thông tin tài khoản",
