--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,7 +59,8 @@
     "wrongPhoneNumber": "Wrong Phone Number",
     "wrongEmail": "Wrong Email",
     "requiredPassword": "Password must have at least one uppercase letter, one lowercase letter, number, special character and be at least 8 characters long",
-    "registerSuccess": "Registration successful, please check your email to activate your account"
+    "registerSuccess": "Registration successful, please check your email to activate your account",
+    "emailAlreadyExited": "Email already exists"
   },
   "PopUpForgotPassword": {
     "forgotPassword": "Forgot Password",
@@ -105,14 +106,15 @@
     "changePasswordSuccess": "Change Password Success",
     "reportSuccess": "Report Success",
     "pleaseSelectResionReport": "Please Select Resion Report",
-    "emailOrPasswordIsIncorrect": "Email or Password is incorrect",
+    "emailOrPasswordIsIncorrect": "Email or Password is incorrect or your account has been block ",
     "oldPasswordIncorrect": "Old Password is incorrect",
     "checkMailToActiveAccount": "Please check your email to activate your account",
     "pending": "Wait for pay",
     "payed": "Paid",
     "commentSucceeded": "Comment Succeeded",
     "commentFalse": "Comment False",
-    "notSupportDragDrop": "The website does not support drag and drop"
+    "notSupportDragDrop": "The website does not support drag and drop",
+    "oldPasswordSameNewPassword": "The new password must not match the old password"
   },
 
   "item": {
