--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -163,7 +163,7 @@
     "description": "Mô tả",
     "owner": "Chủ nhà",
     "phoneNumber": "Số điện thoại",
-    "createPost": "Đăng tin và thanh toán 50K",
+    "createPost": "Đăng tin và thanh toán",
     "updatePost": "Cập nhật",
     "updatePostAndPay": "Cập nhật và thanh toán",
     "uploadImg": "+Tải ảnh",
